src/styles/index.scss
@use "theme";
@use "print";
@use "sass:color";

body {
    *,
    *::after,
    *::before {
        box-sizing: border-box;
        outline: none;
        border: none;
        font-weight: 400;
    }

    script,
    style,
    link {
        display: none !important;
    }
}

@media screen {
    ::selection {
        color: theme.$color-background;
        background: mix(theme.$color-primary, theme.$color-background, 75%);
    }

    ::-webkit-scrollbar {
        width: 0.5rem;
        height: 0.5rem;
    }

    ::-webkit-scrollbar-track {
        background: theme.$color-background;
    }

    ::-webkit-scrollbar-thumb {
        &:not(:hover):not(:active) {
            background: mix(
                theme.$color-foreground,
                theme.$color-background,
                50%
            );
        }
        &:hover:not(:active) {
            background: theme.$color-foreground;
        }
        &:active {
            background: theme.$color-primary;
        }
    }

    ::-webkit-scrollbar-corner {
        background: theme.$color-background;
    }
}

:root {
    background-color: theme.$color-background;
    color: theme.$color-foreground;
    font-family: "Circular", "Gotham", "Satoshi", "Montserrat", "Segoe UI",
        "Arial", sans-serif;
}

@media screen and (max-width: 420px) {
    body {
        font-size: 0.75rem;
    }
}

nav {
    background-color: theme.$color-background;
    box-shadow: 0 0 16px 8px theme.$color-background;
    z-index: 1;
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    width: 100vw;

    a {
        font-size: 2rem;
        color: theme.$color-foreground;
        height: fit-content;
        width: fit-content;
        display: flex;
        flex-direction: row;
        align-items: center;

        img {
            height: 4.5rem;
            width: 4.5rem;
            display: inline-block;
        }
    }
}

@media (hover: hover) {
    nav a {
        transition: color theme.$timing ease-out;
        &:hover {
            color: theme.$color-primary;
        }
    }
}

main {
    max-width: 720px;
    margin: 1rem auto;
    line-height: 1.5;
    padding: 1rem 0.5rem 8rem 0.5rem;

    h1,
    h2,
    h3,
    h4,
    h5,
    h6 {
        font-family: "Baskerville", "Times New Roman", Times, serif !important;
    }

    h1 {
        font-size: 4rem;
        font-weight: 650;
    }

    h2 {
        font-size: 3rem;
        font-weight: 650;
    }

    h3 {
        font-size: 2.25rem;
        font-weight: 550;
    }

    h4 {
        font-size: 1.75rem;
        font-weight: 500;
    }

    article > * {
        margin: 1rem 0;
    }

    h1,
    h2,
    h3,
    h4,
    h5,
    h6 {
        margin-top: 2.5rem;
    }

    a {
        text-decoration: underline;
        text-decoration-color: theme.$color-primary;
        color: theme.$color-primary;

        article {
            overflow: hidden;
            white-space: nowrap;
            text-overflow: ellipsis;
            max-height: 5rem;
        }
    }

    b,
    strong {
        font-weight: 600;
    }

    i,
    em {
        font-style: italic;
    }

    ol a {
        word-break: break-all;
    }

    pre {
        margin: {
            top: 2rem;
            bottom: 2rem;
        }
        padding-left: 3ch;
        position: relative;

        &::before {
            $c: "";
            @for $i from 1 through 32 {
                $c: $c + $i + "\a ";
            }
            content: $c;
            color: theme.$color-comment;
            text-align: right;
            position: absolute;
            top: 0;
            height: calc(100% - 0.4em);
            left: 0;
            overflow: hidden;
        }

        > code {
            display: block;
            overflow-x: auto;
            max-width: 100%;
        }
    }

    pre,
    pre *,
    pre::before,
    code,
    code * {
        // font-size: 0.75rem !important;
        font-family: "Hack", "Cascadia Code", "JetBrains Mono", "Anonymous Pro",
            "Monolisa", "Gintronic", "Dank Mono", "PragmataPro", monospace !important;
    }

    blockquote {
        background-color: rgba(theme.$color-foreground, 0.1);
        border-left: 2px solid theme.$color-foreground;
        padding: 0.5rem 1rem;
    }

    figure {
        img {
            width: 75vmin;
            height: auto;
            display: block;
            margin: 0.5rem auto;
        }

        figcaption {
            color: rgba(theme.$color-foreground, 0.5);
        }
    }
}

footer {
    max-width: 720px;
    margin: {
        left: auto;
        right: auto;
    }

    table {
        border-spacing: 1rem;

        th,
        td {
            text-align: left;

            a {
                color: theme.$color-primary;
            }
        }
    }
}

